{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 181,
  "lineage": "fe51b6ea-5dae-4a82-72a0-8068f6ffc6ff",
  "resources": [
    {
      "module": "module.base.module.asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927105399259:security-group/sg-0207b024d428feb8b",
            "description": "Allow VPC traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0207b024d428feb8b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from load balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0352838232a4f15f2"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-private",
            "name_prefix": "",
            "owner_id": "927105399259",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-private"
            },
            "tags_all": {
              "Name": "dev-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-062700eaf9cda0291"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.module.lb.aws_lb.main",
            "module.base.module.lb.aws_lb_listener.main",
            "module.base.module.lb.aws_lb_target_group.main",
            "module.base.module.lb.aws_security_group.load_balancer",
            "module.base.module.vpc.aws_eip.nat",
            "module.base.module.vpc.aws_internet_gateway.main",
            "module.base.module.vpc.aws_nat_gateway.main",
            "module.base.module.vpc.aws_route_table.private",
            "module.base.module.vpc.aws_route_table.privatedb",
            "module.base.module.vpc.aws_route_table.public",
            "module.base.module.vpc.aws_route_table_association.private",
            "module.base.module.vpc.aws_route_table_association.privatedb",
            "module.base.module.vpc.aws_route_table_association.public",
            "module.base.module.vpc.aws_subnet.private",
            "module.base.module.vpc.aws_subnet.privatedb",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.main",
            "module.base.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:927105399259:loadbalancer/app/dev/981b7143f6b765b8",
            "arn_suffix": "app/dev/981b7143f6b765b8",
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-875396133.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:927105399259:loadbalancer/app/dev/981b7143f6b765b8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0352838232a4f15f2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0076def94663376a1"
              },
              {
                "subnet_id": "subnet-0af373a368bfb786c"
              }
            ],
            "subnets": [
              "subnet-0076def94663376a1",
              "subnet-0af373a368bfb786c"
            ],
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            },
            "vpc_id": "vpc-062700eaf9cda0291",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.base.module.lb.aws_security_group.load_balancer",
            "module.base.module.vpc.aws_eip.nat",
            "module.base.module.vpc.aws_internet_gateway.main",
            "module.base.module.vpc.aws_nat_gateway.main",
            "module.base.module.vpc.aws_route_table.private",
            "module.base.module.vpc.aws_route_table.privatedb",
            "module.base.module.vpc.aws_route_table.public",
            "module.base.module.vpc.aws_route_table_association.private",
            "module.base.module.vpc.aws_route_table_association.privatedb",
            "module.base.module.vpc.aws_route_table_association.public",
            "module.base.module.vpc.aws_subnet.private",
            "module.base.module.vpc.aws_subnet.privatedb",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.main",
            "module.base.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:927105399259:listener/app/dev/981b7143f6b765b8/7b6d6d7923cc3366",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:927105399259:targetgroup/dev/4c5f0a24df04934e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:927105399259:listener/app/dev/981b7143f6b765b8/7b6d6d7923cc3366",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:927105399259:loadbalancer/app/dev/981b7143f6b765b8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.module.lb.aws_lb.main",
            "module.base.module.lb.aws_lb_target_group.main",
            "module.base.module.lb.aws_security_group.load_balancer",
            "module.base.module.vpc.aws_eip.nat",
            "module.base.module.vpc.aws_internet_gateway.main",
            "module.base.module.vpc.aws_nat_gateway.main",
            "module.base.module.vpc.aws_route_table.private",
            "module.base.module.vpc.aws_route_table.privatedb",
            "module.base.module.vpc.aws_route_table.public",
            "module.base.module.vpc.aws_route_table_association.private",
            "module.base.module.vpc.aws_route_table_association.privatedb",
            "module.base.module.vpc.aws_route_table_association.public",
            "module.base.module.vpc.aws_subnet.private",
            "module.base.module.vpc.aws_subnet.privatedb",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.main",
            "module.base.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:927105399259:targetgroup/dev/4c5f0a24df04934e",
            "arn_suffix": "targetgroup/dev/4c5f0a24df04934e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:927105399259:targetgroup/dev/4c5f0a24df04934e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "dev",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-062700eaf9cda0291"
          },
          "dependencies": [
            "module.base.module.vpc.aws_eip.nat",
            "module.base.module.vpc.aws_internet_gateway.main",
            "module.base.module.vpc.aws_nat_gateway.main",
            "module.base.module.vpc.aws_route_table.private",
            "module.base.module.vpc.aws_route_table.privatedb",
            "module.base.module.vpc.aws_route_table.public",
            "module.base.module.vpc.aws_route_table_association.private",
            "module.base.module.vpc.aws_route_table_association.privatedb",
            "module.base.module.vpc.aws_route_table_association.public",
            "module.base.module.vpc.aws_subnet.private",
            "module.base.module.vpc.aws_subnet.privatedb",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.main",
            "module.base.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.lb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927105399259:security-group/sg-0352838232a4f15f2",
            "description": "Allow port 80 TCP inbound to ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0352838232a4f15f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http to ELB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-load-balancer",
            "name_prefix": "",
            "owner_id": "927105399259",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-load-balancer"
            },
            "tags_all": {
              "Name": "dev-load-balancer"
            },
            "timeouts": null,
            "vpc_id": "vpc-062700eaf9cda0291"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.module.vpc.aws_eip.nat",
            "module.base.module.vpc.aws_internet_gateway.main",
            "module.base.module.vpc.aws_nat_gateway.main",
            "module.base.module.vpc.aws_route_table.private",
            "module.base.module.vpc.aws_route_table.privatedb",
            "module.base.module.vpc.aws_route_table.public",
            "module.base.module.vpc.aws_route_table_association.private",
            "module.base.module.vpc.aws_route_table_association.privatedb",
            "module.base.module.vpc.aws_route_table_association.public",
            "module.base.module.vpc.aws_subnet.private",
            "module.base.module.vpc.aws_subnet.privatedb",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.main",
            "module.base.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b2823e6c57a7e554",
            "domain": "vpc",
            "id": "eipalloc-0b2823e6c57a7e554",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-224-129-24.compute-1.amazonaws.com",
            "public_ip": "3.224.129.24",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-nat0"
            },
            "tags_all": {
              "Name": "dev-nat0"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01316281b571b1f34",
            "domain": "vpc",
            "id": "eipalloc-01316281b571b1f34",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-224-187-159.compute-1.amazonaws.com",
            "public_ip": "54.224.187.159",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev-nat1"
            },
            "tags_all": {
              "Name": "dev-nat1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927105399259:internet-gateway/igw-01c3e72c14d63c8d2",
            "id": "igw-01c3e72c14d63c8d2",
            "owner_id": "927105399259",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            },
            "vpc_id": "vpc-062700eaf9cda0291"
          },
          "dependencies": [
            "module.base.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b2823e6c57a7e554",
            "connectivity_type": "public",
            "id": "nat-06e1cfceb21d16f0e",
            "network_interface_id": "eni-0b79708a4b136b71a",
            "private_ip": "10.0.0.131",
            "public_ip": "3.224.129.24",
            "subnet_id": "subnet-0af373a368bfb786c",
            "tags": {
              "Name": "dev-0"
            },
            "tags_all": {
              "Name": "dev-0"
            }
          },
          "dependencies": [
            "module.base.module.vpc.aws_eip.nat",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.main",
            "module.base.module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01316281b571b1f34",
            "connectivity_type": "public",
            "id": "nat-0ac962658860dd5a7",
            "network_interface_id": "eni-028c837fdf4c278eb",
            "private_ip": "10.0.1.203",
            "public_ip": "54.224.187.159",
            "subnet_id": "subnet-0076def94663376a1",
            "tags": {
              "Name": "dev-1"
            },
            "tags_all": {
              "Name": "dev-1"
            }
          },
          "dependencies": [
            "module.base.module.vpc.aws_eip.nat",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.main",
            "module.base.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927105399259:route-table/rtb-00f5ea343a333c269",
            "id": "rtb-00f5ea343a333c269",
            "owner_id": "927105399259",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06e1cfceb21d16f0e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private0"
            },
            "tags_all": {
              "Name": "dev-private0"
            },
            "timeouts": null,
            "vpc_id": "vpc-062700eaf9cda0291"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.module.vpc.aws_eip.nat",
            "module.base.module.vpc.aws_nat_gateway.main",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.main",
            "module.base.module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927105399259:route-table/rtb-0d4558d3b3182a538",
            "id": "rtb-0d4558d3b3182a538",
            "owner_id": "927105399259",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ac962658860dd5a7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-private1"
            },
            "tags_all": {
              "Name": "dev-private1"
            },
            "timeouts": null,
            "vpc_id": "vpc-062700eaf9cda0291"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.module.vpc.aws_eip.nat",
            "module.base.module.vpc.aws_nat_gateway.main",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.main",
            "module.base.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privatedb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927105399259:route-table/rtb-059ad9315ef30c2e0",
            "id": "rtb-059ad9315ef30c2e0",
            "owner_id": "927105399259",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06e1cfceb21d16f0e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-privatedb0"
            },
            "tags_all": {
              "Name": "dev-privatedb0"
            },
            "timeouts": null,
            "vpc_id": "vpc-062700eaf9cda0291"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.module.vpc.aws_eip.nat",
            "module.base.module.vpc.aws_nat_gateway.main",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.main",
            "module.base.module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927105399259:route-table/rtb-00d299302bb214efb",
            "id": "rtb-00d299302bb214efb",
            "owner_id": "927105399259",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ac962658860dd5a7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-privatedb1"
            },
            "tags_all": {
              "Name": "dev-privatedb1"
            },
            "timeouts": null,
            "vpc_id": "vpc-062700eaf9cda0291"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.module.vpc.aws_eip.nat",
            "module.base.module.vpc.aws_nat_gateway.main",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.main",
            "module.base.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927105399259:route-table/rtb-0e07ed46fb6719a66",
            "id": "rtb-0e07ed46fb6719a66",
            "owner_id": "927105399259",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01c3e72c14d63c8d2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-public"
            },
            "tags_all": {
              "Name": "dev-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-062700eaf9cda0291"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.base.module.vpc.aws_internet_gateway.main",
            "module.base.module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0872b0f0514b61232",
            "route_table_id": "rtb-00f5ea343a333c269",
            "subnet_id": "subnet-0f471ff0563b8179b"
          },
          "dependencies": [
            "module.base.module.vpc.aws_eip.nat",
            "module.base.module.vpc.aws_nat_gateway.main",
            "module.base.module.vpc.aws_route_table.private",
            "module.base.module.vpc.aws_subnet.private",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.main",
            "module.base.module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041e742250ef4ed67",
            "route_table_id": "rtb-0d4558d3b3182a538",
            "subnet_id": "subnet-0ab6308bd87797477"
          },
          "dependencies": [
            "module.base.module.vpc.aws_eip.nat",
            "module.base.module.vpc.aws_nat_gateway.main",
            "module.base.module.vpc.aws_route_table.private",
            "module.base.module.vpc.aws_subnet.private",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.main",
            "module.base.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privatedb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049c93559e5fb51f1",
            "route_table_id": "rtb-059ad9315ef30c2e0",
            "subnet_id": "subnet-042eb37834f38b80c"
          },
          "dependencies": [
            "module.base.module.vpc.aws_eip.nat",
            "module.base.module.vpc.aws_nat_gateway.main",
            "module.base.module.vpc.aws_route_table.privatedb",
            "module.base.module.vpc.aws_subnet.privatedb",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.main",
            "module.base.module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c8548f8b3692e1ad",
            "route_table_id": "rtb-00d299302bb214efb",
            "subnet_id": "subnet-0781127b55852e2f0"
          },
          "dependencies": [
            "module.base.module.vpc.aws_eip.nat",
            "module.base.module.vpc.aws_nat_gateway.main",
            "module.base.module.vpc.aws_route_table.privatedb",
            "module.base.module.vpc.aws_subnet.privatedb",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.main",
            "module.base.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c97ead87ccb5f922",
            "route_table_id": "rtb-0e07ed46fb6719a66",
            "subnet_id": "subnet-0af373a368bfb786c"
          },
          "dependencies": [
            "module.base.module.vpc.aws_internet_gateway.main",
            "module.base.module.vpc.aws_route_table.public",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.main",
            "module.base.module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f485465062a4e473",
            "route_table_id": "rtb-0e07ed46fb6719a66",
            "subnet_id": "subnet-0076def94663376a1"
          },
          "dependencies": [
            "module.base.module.vpc.aws_internet_gateway.main",
            "module.base.module.vpc.aws_route_table.public",
            "module.base.module.vpc.aws_subnet.public",
            "module.base.module.vpc.aws_vpc.main",
            "module.base.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927105399259:subnet/subnet-0f471ff0563b8179b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f471ff0563b8179b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "927105399259",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private0"
            },
            "tags_all": {
              "Name": "dev-private0"
            },
            "vpc_id": "vpc-062700eaf9cda0291"
          },
          "dependencies": [
            "module.base.module.vpc.aws_vpc.main",
            "module.base.module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927105399259:subnet/subnet-0ab6308bd87797477",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab6308bd87797477",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "927105399259",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-private1"
            },
            "tags_all": {
              "Name": "dev-private1"
            },
            "vpc_id": "vpc-062700eaf9cda0291"
          },
          "dependencies": [
            "module.base.module.vpc.aws_vpc.main",
            "module.base.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privatedb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927105399259:subnet/subnet-042eb37834f38b80c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042eb37834f38b80c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "927105399259",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-privatedb0"
            },
            "tags_all": {
              "Name": "dev-privatedb0"
            },
            "vpc_id": "vpc-062700eaf9cda0291"
          },
          "dependencies": [
            "module.base.module.vpc.aws_vpc.main",
            "module.base.module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927105399259:subnet/subnet-0781127b55852e2f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0781127b55852e2f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "927105399259",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-privatedb1"
            },
            "tags_all": {
              "Name": "dev-privatedb1"
            },
            "vpc_id": "vpc-062700eaf9cda0291"
          },
          "dependencies": [
            "module.base.module.vpc.aws_vpc.main",
            "module.base.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927105399259:subnet/subnet-0af373a368bfb786c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af373a368bfb786c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "927105399259",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public0"
            },
            "tags_all": {
              "Name": "dev-public0"
            },
            "vpc_id": "vpc-062700eaf9cda0291"
          },
          "dependencies": [
            "module.base.module.vpc.aws_vpc.main",
            "module.base.module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927105399259:subnet/subnet-0076def94663376a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0076def94663376a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "927105399259",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-public1"
            },
            "tags_all": {
              "Name": "dev-public1"
            },
            "vpc_id": "vpc-062700eaf9cda0291"
          },
          "dependencies": [
            "module.base.module.vpc.aws_vpc.main",
            "module.base.module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.base.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:927105399259:vpc/vpc-062700eaf9cda0291",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0213d5bdd1e867204",
            "default_route_table_id": "rtb-0212ca709143f80cf",
            "default_security_group_id": "sg-040fb53c2a84130af",
            "dhcp_options_id": "dopt-089d9978701cb2554",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-062700eaf9cda0291",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0212ca709143f80cf",
            "owner_id": "927105399259",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            }
          }
        }
      ]
    }
  ]
}